# lazy-bob

./: .gitignore  README.md  pyproject.toml
src/lazy_bob/: game.py
tests/: test_game.py
